title created wievport meta tag

--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href = "styled.css"/>
+<meta charset ="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Top news of Russia</title>
 </head>
 <body>
 <h1>Новости дня</h1>
